# latent-space-priors

./: .gitignore  CONTRIBUTING.md  README.md  format  index.html  requirements.txt  train.py  train_dist.py  train_zprior.py
config/: common.yaml  humanoidamass_sac.yaml  lcs2_policy_lo.yaml  lcs2_prior.yaml  lcs2_vae.yaml  zprior_explore.yaml  zprior_options.yaml  zprior_plan.yaml  zprior_regularize.yaml
config/agent/: guidedsac.yaml  guidedsac2.yaml  sac.yaml  sachrl.yaml  vmpo.yaml  vmpocomic.yaml  zpriorplan.yaml
config/hydra/launcher/: slurm.yaml
cpp/: CMakeLists.txt  common.cpp  common.h  common_py.cpp  common_py.h  mocap_env.cpp  mocap_env.h  mocap_env_ext.cpp  mocap_test.cpp
cpp/cmake/: FindMUJOCO.cmake
hucc/: __init__.py  render.py  replaybuffer.py  spaces.py  utils.py
hucc/agents/: __init__.py  agent.py  guidedsac.py  guidedsac2.py  sac.py  sachrl.py  utils.py  vmpo.py  vmpocomic.py  zpriorplan.py
hucc/envs/: __init__.py  amass.py  features.py  mocap_cpp.py  thmp_vector_env.py  wrappers.py
hucc/envs/assets/: robot-smplh-shape.npz
hucc/mocap/: __init__.py  amass.py  conversion.py  datasets.py  envs.py
hucc/models/: __init__.py  blocks.py  convvae.py  prior.py
scripts/: add_latents_to_hdf5.py  gen_amass_jpos.py  gen_amass_mjbox.py  merge_h5_corpora.py
